<resources>


    <string name="action_settings">Settings</string>
    <string name="app_name">Shopping List</string>
    <string name="new_item_created">New Item</string>
    <string name="update_item_title">Edit Shopping Item</string>
    <string name="btn_save">Save</string>
    <string name="error_wrong_interface">The Activity does not implement the TodoHandler interface</string>
    <string name="error_empty_field">This field can not be empty</string>
    <string name="new_item_added">New Item Added</string>
    <string name="action_hide">Hide</string>
    <string name="item_hint">Enter Item</string>
    <string name="descprition_hint">Enter Description</string>
    <string name="price_hint">Enter Price</string>
    <string name="item_category">Item Category:</string>
    <string name="add_from_menu">Add Item</string>
    <string name="delete_all">Remove All Items</string>
    <string name="item">Item</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_cost_message">The Total Cost is</string>
    <string name="confirmation_message">Are You Sure You Want to Remove All Items From Your List?</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="url_button">Enter URL</string>
</resources>
